--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta
+      name="description"
+      content="AI-Powered Digital Health Assistant - Upload medical reports, chat with AI, and book appointments"
+    />
+    <title>HealthAI - Your Digital Health Assistant</title>
   </head>
   <body>
     <div id="root"></div>
