--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,8 +9,20 @@
       content="AI-Powered Digital Health Assistant - Upload medical reports, chat with AI, and book appointments"
     />
     <title>HealthAI - Your Digital Health Assistant</title>
+    <!-- Force dark mode immediately -->
+    <script>
+      // This runs before anything else loads
+      (function () {
+        const root = document.documentElement;
+        root.classList.remove("light");
+        root.classList.add("dark");
+        root.style.colorScheme = "dark";
+        // Store preference
+        localStorage.setItem("theme", "dark");
+      })();
+    </script>
   </head>
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
