--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="AI-Powered Digital Health Assistant - Upload medical reports, chat with AI, and book appointments"
+      content="HealX.ai - AI-Powered Health Assistant - Upload medical reports, chat with AI, and book appointments"
     />
-    <title>HealthAI - Your Digital Health Assistant</title>
+    <title>HealX.ai - Your AI Health Assistant</title>
     <!-- Force dark mode immediately -->
     <script>
       // This runs before anything else loads
